fix ul spacing in table of contents

--- a/source/css/main.css
+++ b/source/css/main.css
@@ -260,6 +260,12 @@ ol ol {
   }
 }
 
+.table-of-contents {
+  ul {
+    margin-top: 0px;
+  }
+}
+
 .content {
   display: flex;
 
